# pawdantic

./: .gitignore  README.md  pyproject.toml
src/pawdantic/: __init__.py  paw_strings.py  paw_types.py
src/pawdantic/fastpaw/: __init__.py
src/pawdantic/pawsql/: __init__.py  schedule.py  sqlmodel_backup.py  sqlpr.py  sqlpr_test.py
src/pawdantic/pawui/: builders.py  from_dtg.py  pawui_types.py  states.py  styles.py  types_.py
tests/: conftest.py  models.py  test_json_col.py
