[project]
name = "pawdantic"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "paw", email = "pawrequest@users.noreply.github.com" }
]
dependencies = [
    "pydantic>=2.6.4",
]

readme = "README.md"
requires-python = ">= 3.8"
[project.optional-dependencies]
ui = [
    'fastui'
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
