[project]
name = "pawdantic"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "paw", email = "pawrequest@users.noreply.github.com" }
]
dependencies = [
    "pydantic>=2.6.4",
    "pydantic-extra-types",
]

readme = "README.md"
requires-python = ">= 3.8"
[project.optional-dependencies]
ui = [
    'fastui'
]
sql = [
    'sqlmodel'
]
dev = [
    'pytest',
    'pytest-asyncio',
]
fast = [
    'fastapi'
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
extend-select = ["Q", "RUF100", "UP"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
format.quote-style = "single"

